[gd_scene load_steps=17 format=2]

[ext_resource path="res://meshes/meshes0.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://scripts/Scene0.gd" type="Script" id=2]
[ext_resource path="res://solo_env.tres" type="Environment" id=3]
[ext_resource path="res://prefabs/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/Block.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/Carrot.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/home.png" type="Texture" id=7]
[ext_resource path="res://assets/reload.png" type="Texture" id=8]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.129412, 0.517647, 0.827451, 0.784314 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform float factor = 0.5;
uniform float aspect_ratio = 1.7;
uniform vec4 fade_color:hint_color;

void fragment(){
	vec2 uv_mod = UV;
	uv_mod.x = mix(0.5, uv_mod.x, aspect_ratio);
	vec4 color;
	float d = length(uv_mod - 0.5);
	if(d < factor) color = vec4(0.);
	else color = fade_color;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/factor = 1.0
shader_param/aspect_ratio = 1.7
shader_param/fade_color = null

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "fromBlack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "toBlack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="Scene" type="Spatial"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.94486, 2.15536, -3.00931 )

[node name="Block" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 9.012, 2.16223, 4.9739 )

[node name="Block2" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 9.01201, 2.16223, 6.97391 )

[node name="Block3" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 9.01201, 2.16223, 2.97391 )

[node name="Block4" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 9.01201, 2.16223, 0.97391 )

[node name="Block5" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 9.01201, 2.16223, 8.97391 )

[node name="Block6" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 15.012, 2.16223, 6.97391 )

[node name="Block7" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 17.012, 2.16223, 6.97391 )

[node name="GridMap" type="GridMap" parent="." groups=["wall"]]
mesh_library = ExtResource( 1 )
cell_scale = 0.55
data = {
"cells": PoolIntArray( 3, 0, 2, 4, 0, 2, 5, 0, 1, 8, 0, 2, 3, 1, 2, 4, 1, 2, 7, 1, 2, 8, 1, 2, 3, 2, 2, 4, 2, 2, 5, 2, 1, 8, 2, 2, 9, 2, 2, 4, 3, 2, 7, 3, 2, 8, 3, 2, 9, 3, 2, 3, 4, 1, 4, 4, 2, 5, 4, 1, 5, 5, 1, 5, 6, 1, 4, 7, 2, 5, 7, 1, 0, 65534, 2, 1, 65534, 2, 2, 65534, 2, 3, 65534, 2, 3, 65535, 2, 4, 65535, 2 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Cam" type="Spatial" parent="."]
transform = Transform( 0.699401, 0, -0.714729, 0, 1, 0, 0.714729, 0, 0.699401, 7.07123, 0.913136, 7.0025 )

[node name="MeshInstance" type="MeshInstance" parent="Cam"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )

[node name="Camera" type="Camera" parent="Cam"]
transform = Transform( -1, -6.18172e-08, 6.18172e-08, 0, 0.707107, 0.707107, -8.74228e-08, 0.707107, -0.707107, 0, 10, -10 )
environment = ExtResource( 3 )
projection = 1
size = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.883042, -0.468582, -0.0258506, -0.22369, 0.37184, 0.900943, -0.412553, 0.801353, -0.433167, 0, 0, 0 )
shadow_enabled = true

[node name="Carrot" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 2.5, 15 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ButtonHome" type="TextureButton" parent="HUD"]
margin_left = 48.0
margin_top = 42.0
margin_right = 113.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
expand = true

[node name="ButtonRetry" type="TextureButton" parent="HUD"]
margin_left = 172.0
margin_top = 45.0
margin_right = 232.0
margin_bottom = 107.0
texture_normal = ExtResource( 8 )
expand = true

[node name="Fade" type="ColorRect" parent="HUD"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationScreen" type="AnimationPlayer" parent="HUD/Fade"]
anims/RESET = SubResource( 9 )
anims/fromBlack = SubResource( 10 )
anims/toBlack = SubResource( 11 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HUD/ButtonHome" to="." method="_on_ButtonHome_pressed"]
[connection signal="pressed" from="HUD/ButtonRetry" to="." method="_on_ButtonRetry_pressed"]
